# local-books

./: .gitignore  CLAUDE.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: android-plan.md  tts-plan.md
docs/superpowers/plans/: 2026-05-24-epubjs-refactor.md  2026-05-24-liquid-glass-ui.md
docs/superpowers/specs/: 2026-05-24-epubjs-refactor-design.md  2026-05-24-liquid-glass-ui-design.md
src/: App.css  App.tsx  FootnotePopup.tsx  Reader.css  Reader.tsx  readerTheme.ts  t2s.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  reader.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: filterBooks.test.ts  foliateReplacement.test.ts  readerTheme.test.ts  t2s.test.ts
src/components/: BookCard.tsx  Bookshelf.tsx  FolderSidebar.tsx
src/lib/: t2sTable.ts  utils.ts
src/reader/: FootnotePopup.tsx  Reader.css  Reader.tsx  ReaderSettings.tsx  TTSPanel.tsx  TocRow.tsx
src/reader/hooks/: useAutoHideUI.ts  useFoliate.ts  useTTS.ts
src/types/: foliate.ts
